[package]
name = "aither-sandbox"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Bash-based tool execution with leash sandboxing"
readme = "../README.md"
keywords = ["sandbox", "agent", "tooling", "bash"]
categories = ["api-bindings"]

[dependencies]
aither-core.workspace = true

# Sandboxing
leash = { path = "../../native-sandbox" }

# Executor for tokio integration
executor-core = { version = "0.7", features = ["tokio"] }

# Async runtime
async-fs = "2"
async-process = "2"
async-io = "2"
bollard = "0.20"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"

# Process control (for killing background tasks)
libc = "0.2"

# Utilities
url = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
anyhow = "1"
thiserror = "2"
base64 = "0.22"
futures-lite = "2.6"
async-channel = "2"
strsim = "0.11.1"
human-hash = "0.4"

# Output compression: content detection + code folding
magika = "1"
tree-sitter = "0.22"
rs-tree-sitter-languages = "0.0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
