[package]
name = "aither-skills"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Skills system for aither-agent - load specialized workflows dynamically"
readme = "../README.md"
keywords = ["ai", "agent", "skills", "plugins"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
async-fs = "2"
futures-lite = "2"

[dev-dependencies]
tempfile = "3.17"

[lints]
workspace = true
