[package]
name = "aither-fs"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem access tool for aither agents"
readme = "../../README.md"
keywords = ["ai", "agent", "tool", "filesystem"]
categories = ["api-bindings"]

[dependencies]
aither-core.workspace = true
anyhow = "1.0"
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
async-fs = "2.2.0"
futures-lite = "2.6"