[package]
name = "aither-webfetch"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web content fetching and HTML-to-Markdown conversion"
readme = "../../README.md"
keywords = ["web", "fetch", "markdown", "async", "scraping"]
categories = ["web-programming"]

[dependencies]
aither-core.workspace = true
anyhow = "1.0"
htmd = "0.1"
readability = "0.3.0"
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
url = "2.5.7"
zenwave.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
