[package]
name = "aither-websearch"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web search tool for aither agents"
readme = "../../README.md"
keywords = ["ai", "agent", "tool", "search"]
categories = ["api-bindings"]

[dependencies]
aither-core.workspace = true
anyhow = "1.0"
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
