[package]
name = "aither-websearch"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web search tool for aither agents"
readme = "../../README.md"
keywords = ["ai", "agent", "tool", "search"]
categories = ["api-bindings"]

[dependencies]
aither-core.workspace = true
anyhow = "1.0"
async-io = "2.3"
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zenwave.workspace = true
url = "2.5"
tracing.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
